--- a/css_files/index.css
+++ b/css_files/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -46,24 +47,120 @@ for large devices (laptops and desktops)
         background-color: white;
         box-sizing: border-box;
     }
+    .hover{
+        transition-duration: 0.3s;
+        border: 2px solid transparent;
+    }
+    .hover:hover{
+        border: 2px solid whitesmoke;
+        transform: translate(-2px,-1px);
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    }
+    /*Top navigation bar*/
     .top_navbar {
         width: 100%;
-        height: 15vh;
+        height: 20vh;
         background-color: transparent;
         top: 0;
         left: 0;
         position: fixed;
+        z-index: 1000;
     }
+    /*top blue navigation bar*/
     .top_navbar-1{
         width: 100%;
-        height: 10vh;
+        height: 14vh;
         background: linear-gradient(45deg,rgb(108, 165, 217),rgb(45, 108, 165));
         display: flex;
+        align-items: center;
     }
+    .logo{
+        width: 4.5vw;
+        height: 4.5vw;
+        border-radius: 30%;
+        background-image: url(/image_files/small_logo.png);
+        background-size: contain;
+        margin-left: 1.5vw;
+    }
+    .input{
+        display: flex;
+        align-items: center;
+        margin-left: 4vw;
+        border-radius: 1vw;
+        border: 3px solid transparent;
+        transition-duration: 0.3s;
+    }
+    .input input{
+        width: 50vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        padding: 0px 1vw 0px 1vw;
+        font-size: 1em;
+        font-family: sans-serif;
+        outline: none;
+    }
+    #category{
+        width: 4vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        background-color: rgb(118, 176, 78);
+        border-top-left-radius: 1vw;
+        border-bottom-left-radius: 1vw;
+    }
+    #search{
+        width: 4vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        border-top-right-radius: 1vw;
+        border-bottom-right-radius: 1vw;
+        background-color: rgb(118, 176, 78);
+    }
+.button_input:active {
+    transform: translateY(2px); /* Slight push-down effect */
+    background-color: rgb(78, 136, 38); /* Even darker green on click */
+}
+    /*top orange navigation bar*/
     .top_navbar-2{
         width: 100%;
-        height: 5vh;
+        height: 6vh;
         display: flex;
-        background-color: orange;
+        background: linear-gradient(45deg,rgba(228, 108, 28, 0.8),rgba(243, 161, 106, 0.8));
     }
+}
+
+/*Footer is starting here*/
+.footer{
+    width: 100%;
+    height: 25vw;
+    background-color: rgb(60, 60, 60);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+}
+.footer table td {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.3s;
+}
+
+.table_footer_data {
+    display: block;  /* Makes the <a> tag fill the entire <td> */
+    padding: 1.6vw;
+    color: rgba(255,255,255,0.6);
+    font-size: 1em;
+    font-weight: 500;
+    text-decoration: none;
+    border: 2px solid transparent;
+    border-radius: 1vw;
+    transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+}
+
+.table_footer_data:hover {
+    border: 2px solid whitesmoke;
+    transform: translate(-2px,-1px);
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    color: rgba(255,255,255,0.9);
 }
