--- a/css_files/index.css
+++ b/css_files/index.css
@@ -78,9 +78,8 @@ for large devices (laptops and desktops)
         width: 4.5vw;
         height: 4.5vw;
         border-radius: 30%;
-        background-image: url(/image_files/small_logo.png);
-        background-size: contain;
         margin-left: 1.5vw;
+        display: inline-block;
     }
     .input{
         display: flex;
@@ -196,8 +195,6 @@ for large devices (laptops and desktops)
 .footer_logo{
     width: 10vw;
     height: 10vw;
-    background-image: url(/image_files/small_logo.png);
-    background-size: cover;
     border-bottom-right-radius: 30%;
     border-top-left-radius: 30%;
 }
