--- a/static/index.css
+++ b/static/index.css
@@ -63,7 +63,7 @@ for large devices (laptops and desktops)
         background-color: transparent;
         top: 0;
         left: 0;
-        position: fixed;
+        position: relative;
         z-index: 1000;
     }
     /*top blue navigation bar*/
@@ -160,16 +160,18 @@ for large devices (laptops and desktops)
         width: 100%;
         height: 6vh;
         display: flex;
-        background: linear-gradient(45deg,rgba(228, 108, 28, 0.8),rgba(243, 161, 106, 0.8));
+        background: linear-gradient(45deg,rgb(228, 108, 28),rgba(243, 161, 106));
+        justify-content: center;
     }
     .top_orange_links{
         display: flex;
         align-items: center;
         margin-left: 1vw;
+        justify-content: center;
     }
     .orange_nav_lin{
         color: white;
-        font-size: 1em;
+        font-size: 1.3vw;
         margin-right: 0.7vw;
         text-decoration: none;
         border: 2px solid transparent;
@@ -184,12 +186,16 @@ for large devices (laptops and desktops)
     }
 }
 
+
+/* Body Main Code */
+
+/* Body Main Code End */
 /*Footer is starting here*/
 .footer{
     width: 100%;
     height: 25vw;
     background-color: rgb(60, 60, 60);
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     display: flex;
