--- a/static/index.css
+++ b/static/index.css
@@ -196,6 +196,7 @@ for large devices (laptops and desktops)
     left: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .footer table td {
     text-align: center;
