--- a/static/index.css
+++ b/static/index.css
@@ -4,16 +4,25 @@
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+    .hover{
+        transition-duration: 0.3s;
+        border: 2px solid transparent;
+    }
+    .hover:hover{
+        border: 2px solid whitesmoke;
+        transform: translate(-2px,-1px);
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    }
+        body {
+        background-color: white;
+        box-sizing: border-box;
+    }
 /*===========================
 for small devices (phones)
 =============================*/
 
 @media (min-width: 320px) and (max-width: 599px) {
-    body {
-        background-color: white;
-        box-sizing: border-box;
-    }
+
     .top_navbar {
         width: 100%;
         height: 10vh;
@@ -27,15 +36,198 @@ for medium devices (tablets)
 
 
 @media (min-width: 600px) and (max-width: 899px) {
-    body {
-        background-color: white;
-        box-sizing: border-box;
-    }
+    /*Top navigation bar*/
     .top_navbar {
         width: 100%;
-        height: 15vh;
-        background-color: limegreen;
+        height: 20vh;
+        background-color: transparent;
+        top: 0;
+        left: 0;
+        position: relative;
+        z-index: 1000;
     }
+    /*top blue navigation bar*/
+    .top_navbar-1{
+        width: 100%;
+        height: 14vh;
+        background: linear-gradient(45deg,rgb(108, 165, 217),rgb(45, 108, 165));
+        display: flex;
+        align-items: center;
+    }
+    .logo{
+        width: 4.5vw;
+        height: 4.5vw;
+        border-bottom-right-radius: 30%;
+        border-top-left-radius: 30%;
+        margin-left: 1.5vw;
+        display: inline-block;
+    }
+    .input{
+        display: flex;
+        align-items: center;
+        margin-left: 3vw;
+        border-radius: 1vw;
+        border: 3px solid transparent;
+        transition-duration: 0.3s;
+    }
+    .input input{
+        width: 50vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        padding: 0px 1vw 0px 1vw;
+        font-size: 1em;
+        font-family: sans-serif;
+        outline: none;
+    }
+    #category{
+        width: 4vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        background-color: rgb(118, 176, 78);
+        border-top-left-radius: 1vw;
+        border-bottom-left-radius: 1vw;
+    }
+    #search{
+        width: 4vw;
+        height: 4.5vw;
+        border: 2px solid transparent;
+        border-top-right-radius: 1vw;
+        border-bottom-right-radius: 1vw;
+        background-color: rgb(118, 176, 78);
+    }
+    #search:hover{
+        background-color: rgb(57, 102, 27);
+    }
+    #search:active{
+        box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.3); 
+        transform: scale(1.04);
+    }
+    #category:hover{
+        background-color: rgb(57, 102, 27);
+    }
+    #category:active{
+        box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.3); 
+        transform: scale(1.04);
+    }
+.button_input:active {
+    transform: translateY(2px); /* Slight push-down effect */
+}
+.top_blue_icons{
+    display: flex;
+    align-items: center;
+    margin-left: 1.3vw;
+}
+.top_blue_icons a{
+    text-decoration: none;
+}
+.top_blue_icons div{
+    color: white;
+    font-size: 0.8em;
+    width: 5vw;
+    height: 5vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 1vw;
+    border-radius: 0.5vw;
+}
+.top_blue_icons div .material-symbols-outlined{
+    font-size: 2.5em;
+}
+    /*top orange navigation bar*/
+    .top_navbar-2{
+        width: 100%;
+        height: 6vh;
+        display: flex;
+        background: linear-gradient(45deg,rgb(228, 108, 28),rgba(243, 161, 106));
+        justify-content: center;
+    }
+    .top_orange_links{
+        display: flex;
+        align-items: center;
+        margin-left: 1vw;
+        justify-content: center;
+    }
+    .orange_nav_lin{
+        color: white;
+        font-size: 1.3vw;
+        margin-right: 0.7vw;
+        text-decoration: none;
+        border: 2px solid transparent;
+        padding: 0.3vw 1vw 0.3vw 1vw;
+        border-radius: 0.5vw;
+        transition-duration: 0.3s;
+    }
+    .orange_nav_lin:hover{
+        text-decoration: underline;
+        color: whitesmoke;
+        font-size: 1.04em;
+    }
+}
+
+/*Footer is starting here*/
+.footer{
+    width: 100%;
+    height: 25vw;
+    background-color: rgb(60, 60, 60);
+    position: relative;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer table td {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.3s;
+}
+
+.table_footer_data {
+    display: block;  /* Makes the <a> tag fill the entire <td> */
+    padding: 1.3vw;
+    color: rgba(255,255,255,0.6);
+    font-size: 1em;
+    font-weight: 500;
+    text-decoration: none;
+    border: 2px solid transparent;
+    border-radius: 1vw;
+    transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+}
+
+.table_footer_data:hover {
+    border: 2px solid whitesmoke;
+    transform: translate(-2px,-1px);
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    color: rgba(255,255,255,0.9);
+}
+#side_footer{
+    margin-left: 5vw;
+    height: 20vw;
+}
+#side_footer td{
+    width: 30vw;
+    display: flex;
+    justify-content: center;
+}
+.footer_logo{
+    width: 10vw;
+    height: 10vw;
+    border-bottom-right-radius: 30%;
+    border-top-left-radius: 30%;
+}
+.icon_github{
+    font-size: 2em;
+    color: rgba(255,255,255,0.6);
+    margin-right: 1vw;
+    padding: 0.5vw;
+    border-radius: 1vw;
+}
+#side_footer td p{
+    color: rgba(255,255,255,0.6);
+    font-size: 1em;
 }
 
 /*=====================================
@@ -43,19 +235,6 @@ for large devices (laptops and desktops)
 ==========================================*/
 
 @media (min-width: 950px) {
-    body {
-        background-color: white;
-        box-sizing: border-box;
-    }
-    .hover{
-        transition-duration: 0.3s;
-        border: 2px solid transparent;
-    }
-    .hover:hover{
-        border: 2px solid whitesmoke;
-        transform: translate(-2px,-1px);
-        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
-    }
     /*Top navigation bar*/
     .top_navbar {
         width: 100%;
