--- a/static/main_body.css
+++ b/static/main_body.css
@@ -1,70 +1,98 @@
 /* Body Main Code */
 #body_main {
-    padding: 5vw 0;
-    background-color: #f5f5f5; /* Light gray background */
+  padding: 5vw 3vw;
+  background-color: #f5f5f5; /* Light gray background */
 }
 
 .top_slider_catalog {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2vw;
 }
 
 /* Responsive slider_catalog */
 .slider_catalog {
-    width: 20vw; /* Width relative to viewport width */
-    height: 30vw; /* Height relative to viewport height */
-    background-color: #ffffff; /* White background for the catalog */
-    display: flex;
-    flex-direction: column; /* Stack list items vertically */
-    overflow: hidden; /* Hide overflow */
-    border-radius: 1vw; /* Rounded corners for the catalog */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  width: 20vw; /* Width relative to viewport width */
+  height: 30vw; /* Height relative to viewport height */
+  background-color: #ffffff; /* White background for the catalog */
+  display: flex;
+  flex-direction: column; /* Stack list items vertically */
+  overflow: hidden; /* Hide overflow */
+  border-radius: 1vw; /* Rounded corners for the catalog */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
 .slider_image {
-    width: 70vw;
-    height: 30vw;
-    background-color: #cccccc; /* Light gray for the image background */
+  width: 70vw;
+  height: 30vw;
+  background-color: #cccccc; /* Light gray for the image background */
 }
 
 .slider {
-    border-radius: 1.5vw;
+  border-radius: 1.5vw;
 }
 
 /* Responsive list items */
 .slider_catalog ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column; /* Stack items vertically */
-    height: 100%; /* Full height of the parent div */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  height: 100%; /* Full height of the parent div */
 }
 
 .slider_catalog li {
-    flex: 1; /* Allow items to grow/shrink */
-    display: flex;
+  flex: 1; /* Allow items to grow/shrink */
+  display: flex;
 }
 .slider_catalog a {
-    display: flex; /* Flex to adjust width and height */
-    align-items: center; /* Center text vertically */
-    justify-content: center; /* Center text horizontally */
-    width: 100%; /* Full width of the li */
-    height: 100%; /* Full height of the li */
-    padding: 0.5vw; /* Adjust padding as needed */
-    text-decoration: none;
-    color: #333333; /* Dark gray text color for contrast */
-    background-color: #e5e5e5; /* Very light gray background */
-    box-sizing: border-box; /* Include padding in width/height */
-    overflow: hidden; /* Hide text overflow */
-    font-size: calc(1vw + 1vh); /* Responsive font size */
-    transition-duration: 0.2s; /* Smooth color transition */
+  display: flex; /* Flex to adjust width and height */
+  align-items: center; /* Center text vertically */
+  justify-content: center; /* Center text horizontally */
+  width: 100%; /* Full width of the li */
+  height: 100%; /* Full height of the li */
+  padding: 0.5vw; /* Adjust padding as needed */
+  text-decoration: none;
+  color: #333333; /* Dark gray text color for contrast */
+  background-color: #e5e5e5; /* Very light gray background */
+  box-sizing: border-box; /* Include padding in width/height */
+  overflow: hidden; /* Hide text overflow */
+  font-size: calc(1vw + 1vh); /* Responsive font size */
+  transition-duration: 0.2s; /* Smooth color transition */
 }
-.border-bototom{
-    border-bottom: 1px dotted grey;
+.border-bototom {
+  border-bottom: 1px dotted grey;
 }
-.slider_catalog a:hover{
-    background: rgb(102,160,212);
-    color: #ffffff;
+.slider_catalog a:hover {
+  background: rgb(102, 160, 212);
+  color: #ffffff;
+}
+.hr {
+  margin: 2vw auto;
+  border: 2px solid rgba(128, 128, 128, 0.2);
+  width: 93vw;
+}
+.variety1 {
+  width: 100%;
+  height: 30vh;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+}
+.variety1_box {
+  width: 18vw;
+  height: 18vw;
+  border-radius: 10%;
+  background-color: rgba(128, 128, 128, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.variety1_box img {
+  width: 70%;
+  background-color: #333333;
 }
