--- a/static/main_body.css
+++ b/static/main_body.css
@@ -93,6 +93,17 @@
   align-items: center;
 }
 .variety1_box img {
-  width: 70%;
+  width: 95%;
   background-color: #333333;
+  height: 70%;
+  border-top-left-radius: 9%;
+  border-top-right-radius: 9%;
+  border-bottom-left-radius: 3%;
+  border-bottom-right-radius: 3%;
+  margin-top: 0.4vw;
+}
+.variety1_box_p {
+  font-size: 2vw;
+  color: pink;
+  text-align: left;
 }
